python/src/.antlr/gec_parserParser.java
// Generated from /home/antonio/Documentos/Universidad/Cuarto/Procesadores de Lenguajes/ProcesadoresLenguaje/python/src/gec_parser.g4 by ANTLR 4.13.1

from parser.symbol_table import SymbolTable
from parser.gec_objects import GameObject, Chunk, Scene, World
import json

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class gec_parserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEFINE=1, SETUP=2, WORLD=3, ADD=4, APPEND=5, SCENE=6, FOR=7, FROM=8, TO=9, 
		IN=10, CHUNK=11, GAMEOBJECT=12, LIST=13, INT=14, FLOAT=15, STRING=16, 
		LPAREN=17, RPAREN=18, LBRACE=19, RBRACE=20, LSQUARE=21, RSQUARE=22, COMMA=23, 
		LT=24, GT=25, ASSIGN=26, OP_ARIT=27, ID=28, INT_LITERAL=29, FLOAT_LITERAL=30, 
		STRING_LITERAL=31, COMMENT=32, BLOCK_COMMENT=33, WS=34;
	public static final int
		RULE_program = 0, RULE_define_setup = 1, RULE_define_world = 2, RULE_define_scene = 3, 
		RULE_statement = 4, RULE_chunk_constructor = 5, RULE_gameobject_constructor = 6, 
		RULE_define_list = 7, RULE_array = 8, RULE_append_statement = 9, RULE_add_statement = 10, 
		RULE_for_loop_number = 11, RULE_for_loop_list = 12, RULE_assignment = 13, 
		RULE_expression = 14, RULE_expression_aux = 15, RULE_declaration = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "define_setup", "define_world", "define_scene", "statement", 
			"chunk_constructor", "gameobject_constructor", "define_list", "array", 
			"append_statement", "add_statement", "for_loop_number", "for_loop_list", 
			"assignment", "expression", "expression_aux", "declaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DEFINE'", "'SETUP'", "'WORLD'", "'ADD'", "'APPEND'", "'SCENE'", 
			"'FOR'", "'FROM'", "'TO'", "'IN'", "'CHUNK'", "'GAMEOBJECT'", "'LIST'", 
			"'INT'", "'FLOAT'", "'STRING'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"','", "'<'", "'>'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEFINE", "SETUP", "WORLD", "ADD", "APPEND", "SCENE", "FOR", "FROM", 
			"TO", "IN", "CHUNK", "GAMEOBJECT", "LIST", "INT", "FLOAT", "STRING", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LSQUARE", "RSQUARE", "COMMA", 
			"LT", "GT", "ASSIGN", "OP_ARIT", "ID", "INT_LITERAL", "FLOAT_LITERAL", 
			"STRING_LITERAL", "COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gec_parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	def on_programa_start(self):
	    self.symbol_table = SymbolTable()

	def on_programa_end(self, world, path):
		print("Fin del programa\n")
		print(self.symbol_table)
		# Crear un json con las escenas
		print(world.get_scenes())
		world_json = world.to_dict()
		with open(path, 'w') as file:
			json.dump(world_json, file, indent=4)


	def eval_expression(self,values,operators=None):
	    result = values[0]
	    for i,op in enumerate(operators):
	        result = self._eval_single_expression([result,values[i+1]],op)
	    return result
	        
	def _eval_single_expression(self,values, operator):
	    match operator:
	        case '+' :
	            return values[0] + values[1]
	        case '-' :
	            return values[0] - values[1]
	        case '*' :
	            return values[0] * values[1]
	        case '*' :
	            return values[0] / values[1]
	        case _:
	            raise ValueError("Operador no existe")

	def is_add_statement(self, statement):
	    return statement.text == "add"

	def get_type(self,object):
	    if isinstance(object, int):
	        return "INT"
	    elif isinstance(object, float):
	        return "FLOAT"
	    elif isinstance(object, str):
	        return "STRING"
	    elif isinstance(object, Chunk):
	        return "CHUNK"
	    elif isinstance(object, GameObject):
	        return "GAMEOBJECT"
	    elif isinstance(object, Scene):
	        return "SCENE"
	    elif isinstance(object, World):
	        return "WORLD"
	    else:
	        return "UNKNOWN"

	public gec_parserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Define_worldContext define_world;
		public Define_setupContext define_setup() {
			return getRuleContext(Define_setupContext.class,0);
		}
		public Define_worldContext define_world() {
			return getRuleContext(Define_worldContext.class,0);
		}
		public TerminalNode EOF() { return getToken(gec_parserParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			self.on_programa_start()
			setState(35);
			define_setup();
			setState(36);
			((ProgramContext)_localctx).define_world = define_world();
			setState(37);
			match(EOF);

			print("world", ((ProgramContext)_localctx).define_world.world.get_scenes())
			self.on_programa_end(((ProgramContext)_localctx).define_world.world,"World.json")
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Define_setupContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(gec_parserParser.DEFINE, 0); }
		public TerminalNode SETUP() { return getToken(gec_parserParser.SETUP, 0); }
		public TerminalNode LPAREN() { return getToken(gec_parserParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(gec_parserParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(gec_parserParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(gec_parserParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Define_setupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_setup; }
	}

	public final Define_setupContext define_setup() throws RecognitionException {
		Define_setupContext _localctx = new Define_setupContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_define_setup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(DEFINE);
			setState(41);
			match(SETUP);
			setState(42);
			match(LPAREN);
			setState(43);
			match(RPAREN);
			setState(44);
			match(LBRACE);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 268564656L) != 0)) {
				{
				{
				setState(45);
				statement();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Define_worldContext extends ParserRuleContext {
		public World world;
		public Define_sceneContext define_scene;
		public List<Define_sceneContext> scenes = new ArrayList<Define_sceneContext>();
		public TerminalNode DEFINE() { return getToken(gec_parserParser.DEFINE, 0); }
		public TerminalNode WORLD() { return getToken(gec_parserParser.WORLD, 0); }
		public TerminalNode LPAREN() { return getToken(gec_parserParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(gec_parserParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(gec_parserParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(gec_parserParser.RBRACE, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(gec_parserParser.STRING_LITERAL, 0); }
		public TerminalNode ID() { return getToken(gec_parserParser.ID, 0); }
		public List<Define_sceneContext> define_scene() {
			return getRuleContexts(Define_sceneContext.class);
		}
		public Define_sceneContext define_scene(int i) {
			return getRuleContext(Define_sceneContext.class,i);
		}
		public Define_worldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_world; }
	}

	public final Define_worldContext define_world() throws RecognitionException {
		Define_worldContext _localctx = new Define_worldContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_define_world);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(DEFINE);
			setState(54);
			match(WORLD);
			setState(55);
			match(LPAREN);
			setState(56);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==STRING_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}


			temp_name = self._input.LT(-1).text
			if temp_name.startswith('"') and temp_name.endswith('"'):
			    temp_name = temp_name[1:-1]
			else:
			    temp_name = self.symbol_table.get_value(temp_name)

			_localctx.world = World(temp_name)

			    
			setState(58);
			match(RPAREN);
			setState(59);
			match(LBRACE);
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEFINE) {
				{
				{
				setState(60);
				((Define_worldContext)_localctx).define_scene = define_scene();
				((Define_worldContext)_localctx).scenes.add(((Define_worldContext)_localctx).define_scene);
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			match(RBRACE);

			for scene in ((Define_worldContext)_localctx).scenes:
			    _localctx.world.add_scene(scene.scene)
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Define_sceneContext extends ParserRuleContext {
		public Scene scene;
		public StatementContext statement;
		public List<StatementContext> statements = new ArrayList<StatementContext>();
		public TerminalNode DEFINE() { return getToken(gec_parserParser.DEFINE, 0); }
		public TerminalNode SCENE() { return getToken(gec_parserParser.SCENE, 0); }
		public TerminalNode LPAREN() { return getToken(gec_parserParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(gec_parserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(gec_parserParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(gec_parserParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(gec_parserParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(gec_parserParser.RBRACE, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(gec_parserParser.STRING_LITERAL, 0); }
		public List<TerminalNode> ID() { return getTokens(gec_parserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(gec_parserParser.ID, i);
		}
		public List<TerminalNode> INT_LITERAL() { return getTokens(gec_parserParser.INT_LITERAL); }
		public TerminalNode INT_LITERAL(int i) {
			return getToken(gec_parserParser.INT_LITERAL, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Define_sceneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_scene; }
	}

	public final Define_sceneContext define_scene() throws RecognitionException {
		Define_sceneContext _localctx = new Define_sceneContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_define_scene);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(DEFINE);
			setState(70);
			match(SCENE);
			setState(71);
			match(LPAREN);
			setState(72);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==STRING_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}


			temp_name = self._input.LT(-1).text
			if temp_name.startswith('"') and temp_name.endswith('"'):
			    temp_name = temp_name[1:-1]
			else:
			    temp_name = self.symbol_table.get_value(temp_name)

			    
			setState(74);
			match(COMMA);
			setState(75);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}


			temp_width_chunk = self._input.LT(-1).text  
			if temp_width_chunk.isdigit():
			    temp_width_chunk = int(temp_width_chunk)
			else:
			    temp_width_chunk = int(self.symbol_table.get_value(temp_width_chunk))

			    
			setState(77);
			match(COMMA);
			setState(78);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}


			temp_length_chunk = self._input.LT(-1).text
			if temp_length_chunk.isdigit():
			    temp_length_chunk = int(temp_length_chunk)
			else:
			    temp_length_chunk = int(self.symbol_table.get_value(temp_length_chunk))

			    
			setState(80);
			match(RPAREN);

			_localctx.scene = Scene(temp_name, temp_width_chunk, temp_length_chunk)
			    
			setState(82);
			match(LBRACE);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 268564656L) != 0)) {
				{
				{
				setState(83);
				((Define_sceneContext)_localctx).statement = statement();
				((Define_sceneContext)_localctx).statements.add(((Define_sceneContext)_localctx).statement);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			   
			for stmt in ((Define_sceneContext)_localctx).statements: 
			    if isinstance(stmt.value, Chunk): 
			        _localctx.scene.add_chunk(stmt.value)
			    
			setState(90);
			match(RBRACE);

			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public any value;
		public Add_statementContext add_statement;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Define_listContext define_list() {
			return getRuleContext(Define_listContext.class,0);
		}
		public Append_statementContext append_statement() {
			return getRuleContext(Append_statementContext.class,0);
		}
		public For_loop_numberContext for_loop_number() {
			return getRuleContext(For_loop_numberContext.class,0);
		}
		public For_loop_listContext for_loop_list() {
			return getRuleContext(For_loop_listContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Add_statementContext add_statement() {
			return getRuleContext(Add_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				define_list();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				append_statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				for_loop_number();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				for_loop_list();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(98);
				declaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(99);
				((StatementContext)_localctx).add_statement = add_statement();

				_localctx.value = ((StatementContext)_localctx).add_statement.chunk
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Chunk_constructorContext extends ParserRuleContext {
		public Chunk chunk;
		public TerminalNode CHUNK() { return getToken(gec_parserParser.CHUNK, 0); }
		public TerminalNode LPAREN() { return getToken(gec_parserParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(gec_parserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(gec_parserParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(gec_parserParser.RPAREN, 0); }
		public List<TerminalNode> ID() { return getTokens(gec_parserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(gec_parserParser.ID, i);
		}
		public List<TerminalNode> INT_LITERAL() { return getTokens(gec_parserParser.INT_LITERAL); }
		public TerminalNode INT_LITERAL(int i) {
			return getToken(gec_parserParser.INT_LITERAL, i);
		}
		public List<TerminalNode> FLOAT_LITERAL() { return getTokens(gec_parserParser.FLOAT_LITERAL); }
		public TerminalNode FLOAT_LITERAL(int i) {
			return getToken(gec_parserParser.FLOAT_LITERAL, i);
		}
		public TerminalNode STRING_LITERAL() { return getToken(gec_parserParser.STRING_LITERAL, 0); }
		public Chunk_constructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk_constructor; }
	}

	public final Chunk_constructorContext chunk_constructor() throws RecognitionException {
		Chunk_constructorContext _localctx = new Chunk_constructorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_chunk_constructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(CHUNK);
			setState(105);
			match(LPAREN);
			setState(106);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}


			temp_pos_x = self._input.LT(-1).text
			if temp_pos_x.isdigit():
			    temp_pos_x = int(temp_pos_x)
			else:  
			    temp_pos_x = int(self.symbol_table.get_value(temp_pos_x))


			setState(108);
			match(COMMA);
			setState(109);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}

			    
			temp_pos_y = self._input.LT(-1).text
			if temp_pos_y.isdigit():
			    temp_pos_y = int(temp_pos_y)
			else:  
			    temp_pos_y = int(self.symbol_table.get_value(temp_pos_y))


			setState(111);
			match(COMMA);
			setState(112);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==FLOAT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}


			temp_scale = self._input.LT(-1).text
			if temp_scale.replace(".","",1).isdigit():
			    temp_scale = float(temp_scale)
			else:  
			    temp_scale = float(self.symbol_table.get_value(temp_scale))


			setState(114);
			match(COMMA);
			setState(115);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==FLOAT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}


			temp_height_multiplier = self._input.LT(-1).text
			if temp_height_multiplier.replace(".","",1).isdigit():
			    temp_height_multiplier = float(temp_height_multiplier)
			else:  
			    temp_height_multiplier = float(self.symbol_table.get_value(temp_height_multiplier))
			    

			setState(117);
			match(COMMA);
			setState(118);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==STRING_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}


			temp_texture = self._input.LT(-1).text
			if temp_texture.startswith('"') and temp_texture.endswith('"'):
			    temp_texture = temp_texture[1:-1]
			else:
			    temp_texture = self.symbol_table.get_value(temp_texture)


			setState(120);
			match(COMMA);
			{
			setState(121);
			match(ID);
			}

			temp_game_objects = self._input.LT(-1).text
			temp_game_objects = self.symbol_table.get_value(temp_game_objects)


			setState(123);
			match(RPAREN);

			_localctx.chunk = Chunk(temp_pos_x, temp_pos_y, temp_scale, temp_height_multiplier, temp_texture, temp_game_objects)
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Gameobject_constructorContext extends ParserRuleContext {
		public GameObject gameobject;
		public TerminalNode GAMEOBJECT() { return getToken(gec_parserParser.GAMEOBJECT, 0); }
		public TerminalNode LPAREN() { return getToken(gec_parserParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(gec_parserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(gec_parserParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(gec_parserParser.RPAREN, 0); }
		public List<TerminalNode> ID() { return getTokens(gec_parserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(gec_parserParser.ID, i);
		}
		public TerminalNode STRING_LITERAL() { return getToken(gec_parserParser.STRING_LITERAL, 0); }
		public TerminalNode INT_LITERAL() { return getToken(gec_parserParser.INT_LITERAL, 0); }
		public List<TerminalNode> FLOAT_LITERAL() { return getTokens(gec_parserParser.FLOAT_LITERAL); }
		public TerminalNode FLOAT_LITERAL(int i) {
			return getToken(gec_parserParser.FLOAT_LITERAL, i);
		}
		public Gameobject_constructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gameobject_constructor; }
	}

	public final Gameobject_constructorContext gameobject_constructor() throws RecognitionException {
		Gameobject_constructorContext _localctx = new Gameobject_constructorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_gameobject_constructor);
		int _la;
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(GAMEOBJECT);
				setState(127);
				match(LPAREN);
				setState(128);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==STRING_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}


				temp_model = self._input.LT(-1).text
				if temp_model.startswith('"') and temp_model.endswith('"'):
				    temp_model = temp_model[1:-1]
				else:
				    temp_model = self.symbol_table.get_value(temp_model)


				setState(130);
				match(COMMA);
				setState(131);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==INT_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}

				    
				temp_density = self._input.LT(-1).text
				if temp_density.isdigit():
				    temp_density = int(temp_density)
				else:  
				    temp_density = int(self.symbol_table.get_value(temp_density))
				    

				setState(133);
				match(COMMA);
				setState(134);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==FLOAT_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}

				    
				temp_min_scale = self._input.LT(-1).text
				if temp_min_scale.replace(".","",1).isdigit():
				    temp_min_scale = float(temp_min_scale)
				else:  
				    temp_min_scale = float(self.symbol_table.get_value(temp_min_scale))
				    

				setState(136);
				match(COMMA);
				setState(137);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==FLOAT_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}

				    
				temp_max_scale = self._input.LT(-1).text
				if temp_max_scale.replace(".","",1).isdigit():
				    temp_max_scale = float(temp_max_scale)
				else:  
				    temp_max_scale = float(self.symbol_table.get_value(temp_max_scale))
				    

				setState(139);
				match(RPAREN);

				_localctx.gameobject = GameObject(temp_model, temp_density, temp_min_scale, temp_max_scale)

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(GAMEOBJECT);
				setState(142);
				match(LPAREN);
				setState(143);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==STRING_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}

				    
				temp_model = self._input.LT(-1).text
				if temp_model.startswith('"') and temp_model.endswith('"'):
				    temp_model = temp_model[1:-1]
				else:
				    temp_model = self.symbol_table.get_value(temp_model)
				    

				setState(145);
				match(COMMA);
				setState(146);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==INT_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}

				    
				temp_density = self._input.LT(-1).text
				if temp_density.isdigit():
				    temp_density = int(temp_density)
				else:  
				    temp_density = int(self.symbol_table.get_value(temp_density))
				    

				setState(148);
				match(COMMA);
				setState(149);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==FLOAT_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}

				    
				temp_scale = self._input.LT(-1).text
				if temp_scale.replace(".","",1).isdigit():
				    temp_scale = float(temp_scale)
				else:  
				    temp_scale = float(self.symbol_table.get_value(temp_scale))
				    

				setState(151);
				match(RPAREN);

				_localctx.gameobject = GameObject(temp_model, temp_density, temp_scale)

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
